--- a/publique/index.html
+++ b/publique/index.html
@@ -7,5 +7,18 @@
 <body>
 <p>Bienvenue sur le chat</p>
 
+<script src="/socket.io/socket.io.js" ></script>
+<script>
+   var socket = io();
+   socket.on('connect',()=>{
+       console.log('Connection etablie sur le serveur');
+   });
+
+   socket.on('disconnect',()=>{
+
+       console.log('Vous etes deconnecte du serveur');
+   })
+</script>
+
 </body>
 </html>
