--- a/publique/index.html
+++ b/publique/index.html
@@ -6,7 +6,18 @@
 </head>
 <body>
 <p>Bienvenue sur le chat</p>
+<ol id="messages"></ol>
 
+<form id="formulaire-message">
+    <input name="message" type="text" placeholder="Message"/>
+    <button type="submit">Envoie</button>
+
+</form>
+
+
+
+
+<script src="js/jquery-3.4.0.min.js" ></script>
 <script src="/socket.io/socket.io.js" ></script>
 <script src="js/index.js" ></script>
 
